# engine

./: CMakeLists.txt  clean.sh  cmakeall.sh  makeall.sh
include/: animation.h  baseGame.h  font.h  save.h  texture.h  window.h
include/util/: log.h  sdlutil.h  util.h  vect.h
src/: animation.cpp  baseGame.cpp  font.cpp  save.cpp  texture.cpp  window.cpp
src/util/: log.cpp  sdlutil.cpp  util.cpp
